test/errors/importee-useref-hook-wrong-init/code.js
import { useRef } from "react";
/**
 * @__IMPORTABLE_HOOK__
 */

export default function useTestHook() {
  const a = {};
  useRef(a);
}
